--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,7 +8,7 @@
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
         <activity
-            android:name=".FirstActivity"
+            android:name=".SecondActivity"
             android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -16,10 +16,10 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity
-            android:name=".SecondActivity"
-            android:label="@string/title_activity_second" >
-        </activity>
+        <!--<activity-->
+            <!--android:name=".SecondActivity"-->
+            <!--android:label="@string/title_activity_second" >-->
+        <!--</activity>-->
     </application>
 
 </manifest>
