--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,16 +10,24 @@
         <activity
             android:name=".SecondActivity"
             android:label="@string/app_name" >
+        </activity>
+        <!-- <activity -->
+        <!-- android:name=".SecondActivity" -->
+        <!-- android:label="@string/title_activity_second" > -->
+        <!-- </activity> -->
+        <activity
+            android:name=".RelativeLayoutExamActivity"
+            android:label="@string/title_activity_relative_layout_exam" >
+        </activity>
+        <activity
+            android:name=".TableLayoutActivity"
+            android:label="@string/title_activity_table_layout" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <!--<activity-->
-            <!--android:name=".SecondActivity"-->
-            <!--android:label="@string/title_activity_second" >-->
-        <!--</activity>-->
     </application>
 
 </manifest>
