실행 아이콘 2개

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,6 +18,11 @@
         <activity
             android:name=".RelativeLayoutExamActivity"
             android:label="@string/title_activity_relative_layout_exam" >
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
         </activity>
         <activity
             android:name=".TableLayoutActivity"
