도전01 한 화면에 두 개의 이미지뷰 배치하기 - 솔님 소스

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,24 +18,18 @@
         <activity
             android:name=".RelativeLayoutExamActivity"
             android:label="@string/title_activity_relative_layout_exam" >
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
         </activity>
         <activity
             android:name=".TableLayoutActivity"
             android:label="@string/title_activity_table_layout" >
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
         </activity>
         <activity
             android:name=".FrameLayoutActivity"
             android:label="@string/title_activity_frame_layout" >
+        </activity>
+        <activity
+            android:name=".ImageExamActivity"
+            android:label="@string/title_activity_image_exam" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
