--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -34,6 +34,10 @@
         <activity
             android:name=".EditTextActivity"
             android:label="@string/title_activity_edit_text" >
+        </activity>
+        <activity
+            android:name=".SMSActivity"
+            android:label="@string/title_activity_sms" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
