--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -26,11 +26,6 @@
         <activity
             android:name=".FrameLayoutActivity"
             android:label="@string/title_activity_frame_layout" >
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
         </activity>
         <activity
             android:name=".ImageExamActivity"
@@ -43,7 +38,19 @@
         <activity
             android:name=".SMSActivity"
             android:label="@string/title_activity_sms" >
+        </activity>
+        <activity
+            android:name=".activity.ActivityExamActivity"
+            android:label="@string/title_activity_activity_exam" android:launchMode="singleTop">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
 
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
+        <activity
+            android:name=".activity.TargetActivity"
+            android:label="@string/title_activity_target" >
         </activity>
     </application>
 
