--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,9 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.suwonsmartapp.hello" >
 
+    <!-- 도전.06 웹브라우저 화면 구성 -->
+    <uses-permission android:name="android.permission.INTERNET" />
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -63,6 +66,10 @@
         <activity
             android:name=".challenge.challenge05.Mission05MainActivity"
             android:label="@string/title_activity_mission05_main" >
+        </activity>
+        <activity
+            android:name=".challenge.challenge06.Mission06MainActivity"
+            android:label="@string/title_activity_mission06_main" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
