--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,64 +12,72 @@
         android:theme="@style/AppTheme">
         <activity
             android:name=".activity.SecondActivity"
-            android:label="@string/app_name"></activity>
+            android:label="@string/app_name" />
         <!-- <activity -->
         <!-- android:name=".SecondActivity" -->
         <!-- android:label="@string/title_activity_second" > -->
         <!-- </activity> -->
         <activity
             android:name=".activity.RelativeLayoutExamActivity"
-            android:label="@string/title_activity_relative_layout_exam"></activity>
+            android:label="@string/title_activity_relative_layout_exam" />
         <activity
             android:name=".activity.TableLayoutActivity"
-            android:label="@string/title_activity_table_layout"></activity>
+            android:label="@string/title_activity_table_layout" />
         <activity
             android:name=".activity.FrameLayoutActivity"
-            android:label="@string/title_activity_frame_layout"></activity>
+            android:label="@string/title_activity_frame_layout" />
         <activity
             android:name=".challenge.challenge01.ImageExamActivity"
-            android:label="@string/title_activity_image_exam"></activity>
+            android:label="@string/title_activity_image_exam" />
         <activity
             android:name=".activity.EditTextActivity"
-            android:label="@string/title_activity_edit_text"></activity>
+            android:label="@string/title_activity_edit_text" />
         <activity
             android:name=".challenge.challenge02.SMSActivity"
-            android:label="@string/title_activity_sms"></activity>
+            android:label="@string/title_activity_sms" />
         <activity
             android:name=".activity.ActivityExamActivity"
             android:label="@string/title_activity_activity_exam"
-            android:launchMode="singleTop"></activity>
+            android:launchMode="singleTop" />
         <activity
             android:name=".activity.TargetActivity"
-            android:label="@string/title_activity_target"></activity>
+            android:label="@string/title_activity_target" />
         <activity
             android:name=".event.TouchEventActivity"
-            android:label="@string/title_activity_event"></activity>
+            android:label="@string/title_activity_event" />
         <activity
             android:name=".challenge.challenge04.MainActivity"
-            android:label="@string/title_activity_main"></activity>
+            android:label="@string/title_activity_main" />
         <activity
             android:name=".challenge.challenge04.SubActivity"
-            android:label="@string/title_activity_sub"></activity>
+            android:label="@string/title_activity_sub" />
         <activity
             android:name=".challenge.challenge05.Mission05MainActivity"
-            android:label="@string/title_activity_mission05_main"></activity>
+            android:label="@string/title_activity_mission05_main" />
         <activity
             android:name=".challenge.challenge06.Mission06MainActivity"
-            android:label="@string/title_activity_mission06_main"></activity>
+            android:label="@string/title_activity_mission06_main" />
         <activity
             android:name=".listview.ListViewExam01Activity"
             android:label="@string/title_activity_list_view_exam01"
-            android:theme="@style/Base.Theme.AppCompat"></activity>
+            android:theme="@style/Base.Theme.AppCompat" />
         <activity
             android:name=".listview.ListViewExam02Activity"
-            android:label="ListViewExam02Activity">
+            android:label="ListViewExam02Activity" />
+        <activity
+            android:name=".MainActivity"
+            android:label="MainActivity"
+            android:theme="@style/Base.Theme.AppCompat">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity
+            android:name=".SubActivity"
+            android:label="SubActivity"
+            android:theme="@style/Base.Theme.AppCompat" />
     </application>
 
 </manifest>
