--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.suwonsmartapp.hello">
+    package="com.suwonsmartapp.hello" >
 
     <!-- 도전.06 웹브라우저 화면 구성 -->
     <uses-permission android:name="android.permission.INTERNET" />
@@ -9,7 +9,7 @@
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
-        android:theme="@style/AppTheme">
+        android:theme="@style/AppTheme" >
         <activity
             android:name=".activity.SecondActivity"
             android:label="@string/app_name" />
@@ -67,7 +67,7 @@
         <activity
             android:name=".MainActivity"
             android:label="MainActivity"
-            android:theme="@style/Base.Theme.AppCompat">
+            android:theme="@style/Base.Theme.AppCompat" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -81,6 +81,10 @@
         <activity
             android:name=".listview.SpinnerActivity"
             android:label="@string/title_activity_spinner" />
+        <activity
+            android:name=".listview.GridActivity"
+            android:label="@string/title_activity_grid" >
+        </activity>
     </application>
 
 </manifest>
