달력 만들기 예제 1차

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -88,7 +88,8 @@
             android:theme="@style/Base.Theme.AppCompat" />
         <activity
             android:name=".challenge.CalendarActivity"
-            android:label="@string/title_activity_calendar" />
+            android:label="@string/title_activity_calendar"
+            android:theme="@style/Base.Theme.AppCompat" />
     </application>
 
 </manifest>
