달력 만들기 예제 2차 - 어댑터를 BaseAdapter 상속 받도록 구현 - GridView 셀의 크기 조정 - 셀 터치시 노란 배경 설정

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -88,8 +88,7 @@
             android:theme="@style/Base.Theme.AppCompat" />
         <activity
             android:name=".challenge.CalendarActivity"
-            android:label="@string/title_activity_calendar"
-            android:theme="@style/Base.Theme.AppCompat" />
+            android:label="@string/title_activity_calendar" />
     </application>
 
 </manifest>
