--- a/.gitignore
+++ b/.gitignore
@@ -15,6 +15,7 @@ gen/
 # Gradle files
 .gradle/
 build/
+gradle.properties
 
 # Local configuration file (sdk path, etc)
 local.properties
@@ -24,8 +25,15 @@ proguard/
 
 # Log Files
 *.log
+
+# Intellij project files
+*.iml
+*.ipr
+*.iws
 .idea/
-gradlew
-gradlew.bat
-gradle
-.navigation
+
+# Android Studio files
+*/build/
+
+# Mac OS .DS_Store file
+.DS_Store
