JSON Parsing 예제 6차 - WebView를 가지는 activity 추가 - 거기에 url 던져서 보여주도록 추가

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -124,7 +124,10 @@
 
         <activity
             android:name=".parsing.ParsingActivity"
-            android:label="@string/title_activity_parsing"></activity>
+            android:label="@string/title_activity_parsing" />
+        <activity
+            android:name=".parsing.WebViewActivity"
+            android:label="@string/title_activity_web_view"></activity>
     </application>
 
 </manifest>
