--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.suwonsmartapp.hello">
+    package="com.suwonsmartapp.hello" >
 
     <!-- 도전.06 웹브라우저 화면 구성 -->
     <uses-permission android:name="android.permission.INTERNET" />
@@ -8,21 +8,23 @@
     <!-- 구글 맵을 위해 추가 -->
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
-    <!-- The following two permissions are not required to use
-         Google Maps Android API v2, but are recommended. -->
+    <!--
+         The following two permissions are not required to use
+         Google Maps Android API v2, but are recommended.
+    -->
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
 
     <!-- Open GL 버전2 지원여부 (Google Map) -->
     <uses-feature
         android:glEsVersion="0x00020000"
-        android:required="true"/>
+        android:required="true" />
 
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
-        android:theme="@style/AppTheme">
+        android:theme="@style/AppTheme" >
         <activity
             android:name=".activity.SecondActivity"
             android:label="@string/app_name" />
@@ -80,7 +82,7 @@
         <activity
             android:name=".MainActivity"
             android:label="MainActivity"
-            android:theme="@style/Base.Theme.AppCompat">
+            android:theme="@style/Base.Theme.AppCompat" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -128,7 +130,7 @@
         <receiver
             android:name=".broadcast.MyReceiver"
             android:enabled="true"
-            android:exported="true">
+            android:exported="true" >
             <intent-filter>
                 <action android:name="android.intent.action.BATTERY_CHANGED" />
                 <action android:name="android.intent.action.BATTERY_LOW" />
@@ -141,11 +143,9 @@
         <activity
             android:name=".parsing_json.WebViewActivity"
             android:label="@string/title_activity_web_view" />
-
         <activity
             android:name=".parsing_xml.ParsingActivity"
             android:label="@string/title_activity_parsing" />
-
         <activity
             android:name=".map.MainActivity"
             android:label="@string/title_activity_parsing" />
@@ -158,6 +158,10 @@
             android:name="com.google.android.geo.API_KEY"
             android:value="AIzaSyA4KvVl4vfpkj0-6_hf4csqANy4ubHZFXo" />
 
+        <activity
+            android:name=".bitmap.BitmapActivity"
+            android:label="@string/title_activity_bitmap" >
+        </activity>
     </application>
 
 </manifest>
