--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -168,7 +168,10 @@
         </activity>
         <activity
             android:name=".save.preference.SharedPreferenceActivity"
-            android:label="@string/title_activity_shared_preference"></activity>
+            android:label="@string/title_activity_shared_preference" />
+        <activity
+            android:name=".save.preference.SettingsActivity"
+            android:label="@string/title_activity_settings"></activity>
     </application>
 
 </manifest>
