--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -171,7 +171,10 @@
             android:label="@string/title_activity_shared_preference" />
         <activity
             android:name=".save.preference.SettingsActivity"
-            android:label="@string/title_activity_settings"></activity>
+            android:label="@string/title_activity_settings" />
+        <activity
+            android:name=".save.file.FileActivity"
+            android:label="@string/title_activity_file"></activity>
     </application>
 
 </manifest>
