DB - Helper 클래스 작성 - Insert 방법    -SQL 직접 사용    - ContentValues 사용

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -174,7 +174,10 @@
             android:label="@string/title_activity_settings" />
         <activity
             android:name=".save.file.FileActivity"
-            android:label="@string/title_activity_file"></activity>
+            android:label="@string/title_activity_file" />
+        <activity
+            android:name=".save.db.DbActivity"
+            android:label="@string/title_activity_db"></activity>
     </application>
 
 </manifest>
