멀티채팅 서버, 클라이언트 소스 업로드 - Thread 밑에 Activity 추가

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -177,7 +177,11 @@
             android:label="@string/title_activity_file" />
         <activity
             android:name=".save.db.DbActivity"
-            android:label="@string/title_activity_db"></activity>
+            android:label="@string/title_activity_db" />
+
+        <activity
+            android:name=".chat.ClientActivity"
+            android:label="ClientActivity" />
     </application>
 
 </manifest>
