--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -203,6 +203,7 @@
             android:name=".multimedia.MediaPlayerActivity"
             android:label="@string/title_activity_media_player" >
 
+            <!-- 오디오 파일이 선택 되었을 때 Chooser 에 표시 되도록 -->
             <intent-filter>
                 <action android:name="android.intent.action.VIEW" />
                 <category android:name="android.intent.category.DEFAULT" />
