--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -25,6 +25,10 @@
 
     <uses-feature android:name="android.hardware.camera" />
 
+    <!-- 주소록 읽기 쓰기 권한 -->
+    <uses-permission android:name="android.permission.WRITE_CONTACTS" />
+    <uses-permission android:name="android.permission.READ_CONTACTS" />
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -206,9 +210,11 @@
             <!-- 오디오 파일이 선택 되었을 때 Chooser 에 표시 되도록 -->
             <intent-filter>
                 <action android:name="android.intent.action.VIEW" />
+
                 <category android:name="android.intent.category.DEFAULT" />
-                <data android:scheme="file"/>
-                <data android:mimeType="audio/*"/>
+
+                <data android:scheme="file" />
+                <data android:mimeType="audio/*" />
             </intent-filter>
         </activity>
 
@@ -217,6 +223,16 @@
             android:enabled="true"
             android:exported="true" >
         </service>
+
+        <activity
+            android:name=".challenge.challenge17.MovieListActivity"
+            android:label="@string/title_activity_movie_list" >
+        </activity>
+        <activity
+            android:name=".contentprovider.ContactActivity"
+            android:theme="@style/Theme.AppCompat"
+            android:label="@string/title_activity_contact" >
+        </activity>
     </application>
 
 </manifest>
