- 파일매니저의 FileAdapter 를 외부 라이브러리 프로젝트로 이동

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -17,12 +17,19 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
+
+    testOptions {
+        unitTests.returnDefaultValues = true
+    }
 }
 
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
-    compile 'com.android.support:appcompat-v7:22.1.0'
-    compile 'com.google.android.gms:play-services:7.0.0'
+    compile 'com.android.support:appcompat-v7:22.1.1'
+    compile 'com.google.android.gms:play-services:7.3.0'
 
     compile project(':asyncbitmaploader')
+    compile project(':mylibrary')
+
+    testCompile 'junit:junit:4.12'
 }
