--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -29,6 +29,12 @@
     <uses-permission android:name="android.permission.WRITE_CONTACTS" />
     <uses-permission android:name="android.permission.READ_CONTACTS" />
 
+    <!-- 위치 정보 권한 -->
+    <!-- 3G, LTE, Wifi 를 통한 위치 정보 얻기 -->
+    <!-- <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"/> -->
+    <!-- 3G, LTE, Wifi, GPS 를 통한 위치 정보 얻기 -->
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -233,9 +239,13 @@
             android:theme="@style/Theme.AppCompat" >
         </activity>
         <activity
-            android:theme="@style/Theme.AppCompat"
             android:name=".filemanager.FileManagerActivity"
-            android:label="@string/title_activity_file_manager" >
+            android:label="@string/title_activity_file_manager"
+            android:theme="@style/Theme.AppCompat" >
+        </activity>
+        <activity
+            android:name=".location.LocationActivity"
+            android:label="@string/title_activity_location" >
         </activity>
     </application>
 
