--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -35,6 +35,9 @@
     <!-- 3G, LTE, Wifi, GPS 를 통한 위치 정보 얻기 -->
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
 
+    <!-- 진동 권한 -->
+    <uses-permission android:name="ANDROID.PERMISSION.VIBRATE" />
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -247,6 +250,10 @@
         <activity
             android:name=".location.LocationActivity"
             android:label="@string/title_activity_location" >
+        </activity>
+        <activity
+            android:name=".notification.NotificationActivity"
+            android:label="@string/title_activity_notification" >
         </activity>
     </application>
 
