--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -54,7 +54,6 @@
             android:configChanges="keyboard|keyboardHidden|screenLayout|screenSize|orientation"
             android:label="@string/app_name"
             android:theme="@android:style/Theme.Translucent.NoTitleBar" />
-
         <activity
             android:name=".activity.SecondActivity"
             android:label="@string/app_name" />
@@ -286,6 +285,11 @@
         <activity
             android:name=".activity.LoginActivity"
             android:label="@string/title_activity_login" >
+        </activity>
+        <activity
+            android:name=".sensor.BallGameActivity"
+            android:screenOrientation="portrait"
+            android:label="@string/title_activity_ball_game" >
         </activity>
     </application>
 
