--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -288,8 +288,13 @@
         </activity>
         <activity
             android:name=".sensor.BallGameActivity"
+            android:label="@string/title_activity_ball_game"
+            android:screenOrientation="portrait" >
+        </activity>
+        <activity
             android:screenOrientation="portrait"
-            android:label="@string/title_activity_ball_game" >
+            android:name=".location.SpeedActivity"
+            android:label="@string/title_activity_speed" >
         </activity>
     </application>
 
