--- a/app/build.gradle
+++ b/app/build.gradle
@@ -25,8 +25,8 @@ android {
 
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
-    compile 'com.android.support:appcompat-v7:22.1.1'
-    compile 'com.google.android.gms:play-services:7.3.0'
+    compile 'com.android.support:design:22.2.0'
+    compile 'com.google.android.gms:play-services:7.5.0'
 
     compile 'com.facebook.android:facebook-android-sdk:4.1.0'
 
