Challenge17에 썸네일 로드 되도록 수정 + 회전시 레이아웃 변경

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -300,6 +300,7 @@
         <activity
             android:theme="@style/Theme.AppCompat.Light.NoActionBar"
             android:name=".activity.ToolbarActivity"
+            android:configChanges="orientation|screenSize"
             android:label="@string/title_activity_toolbar" >
         </activity>
     </application>
