--- a/app/build.gradle
+++ b/app/build.gradle
@@ -18,6 +18,13 @@ android {
         }
     }
 
+    sourceSets {
+        main {
+//            jni.srcDirs = []
+            jniLibs.srcDir "src/main/libs"
+        }
+    }
+
     testOptions {
         unitTests.returnDefaultValues = true
     }
