--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -303,6 +303,7 @@
             android:configChanges="orientation|screenSize"
             android:label="@string/title_activity_toolbar" >
         </activity>
+        <activity android:name=".activity.JNIActivity" />
     </application>
 
 </manifest>
