Activity Transition 예제 (현재 롤리팝 전용)

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -304,6 +304,7 @@
         </activity>
         <activity android:name=".activity.JNIActivity" />
         <activity android:name=".activity.EventBusActivity" />
+        <activity android:name=".activity.NextActivity" />
     </application>
 
 </manifest>
