DB연습 조회 추가

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -305,6 +305,7 @@
         <activity android:name=".activity.JNIActivity" />
         <activity android:name=".activity.EventBusActivity" />
         <activity android:name=".activity.NextActivity" />
+        <activity android:name=".activity.db.DbExamActivity" />
     </application>
 
 </manifest>
