--- a/app/build.gradle
+++ b/app/build.gradle
@@ -6,7 +6,7 @@ android {
 
     defaultConfig {
         applicationId "com.suwonsmartapp.hello"
-        minSdkVersion 19
+        minSdkVersion 21
         targetSdkVersion 21
         versionCode 1
         versionName "1.0"
@@ -39,6 +39,10 @@ android {
     }
 }
 
+repositories {
+    maven { url 'http://junsuk5.github.io/AsyncBitmapLoader/repository' }
+}
+
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     compile 'com.android.support:design:22.2.0'
@@ -50,7 +54,7 @@ dependencies {
 
     compile 'de.greenrobot:eventbus:2.4.0'
 
-    compile project(':asyncbitmaploader')
+    compile 'com.suwonsmartapp:async-bitmap-loader:0.1'
     compile project(':mylibrary')
 
     // https://github.com/googlesamples/android-testing 참고
@@ -59,4 +63,8 @@ dependencies {
 //    testCompile "org.robolectric:robolectric:2.4"
     androidTestCompile 'com.android.support.test:testing-support-lib:0.1'
     androidTestCompile 'org.hamcrest:hamcrest-core:1.3'
+
+    // 메모리 릭 검출 라이브러리
+    debugCompile 'com.squareup.leakcanary:leakcanary-android:1.3'
+    releaseCompile 'com.squareup.leakcanary:leakcanary-android-no-op:1.3'
 }
