안 올라간 xml 업로드

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -225,8 +225,8 @@
         </activity>
         <activity
             android:name=".multimedia.MediaPlayerActivity"
-            android:configChanges="keyboardHidden|orientation|screenSize"
-            android:label="@string/title_activity_media_player" >
+            android:label="@string/title_activity_media_player"
+            android:launchMode="singleTask" >
 
             <!-- 오디오 파일이 선택 되었을 때 Chooser 에 표시 되도록 -->
             <intent-filter>
